git: manually accept incoming changes