@@ -16,11 +16,41 @@ FROM alpine:3.14.2 as build
 
 WORKDIR /usr/app/proxybroker
 COPY . .
-COPY --from=cache /home/gradle/cache_home /home/gradle/.gradle
 ENV JAVA_MINIMAL="/opt/java-minimal"
+
 RUN apk add --no-cache openjdk11-jdk openjdk11-jmods gradle
 
-RUN gradle bootJar -i --stacktrace
+# https://nipafx.dev/jdeps-tutorial-analyze-java-project-dependencies/
+# find JDK dependencies dynamically from jar
+RUN jdeps \
+    # dont worry about missing modules
+    --ignore-missing-deps \
+    # suppress any warnings printed to console
+    -q \
+    # java release version targeting
+    --multi-release 11 \
+    # output the dependencies at end of run
+    --print-module-deps \
+    # specify the the dependencies for the jar
+    --class-path build/lib/* \
+    # pipe the result of running jdeps on the app jar to file
+    app/build/libs/ProxyBroker.jar > jre-deps.info
+# https://stackoverflow.com/questions/57955837/java-11-java-beans-propertychangelistener
+# https://stackoverflow.com/questions/61727613/unexpected-behaviour-from-gson
+# Build minimal JRE
+RUN jlink --verbose \
+     --compress 2 \
+     --no-header-files \
+     --no-man-pages \
+     --add-modules $(cat jre-deps.info),java.xml,java.sql,java.prefs,java.desktop,java.management,jdk.unsupported \
+         # java.desktop - java/beans/PropertyEditorSupport \
+         # java.instrument - java/lang/instrument/IllegalClassFormatException
+         # java.naming - javax/naming/NamingException
+         # java.management - javax/management/MBeanServer
+         # java.security.jgss - org/ietf/jgss/GSSException \
+     --module-path build/lib/* \
+     --release-info="add:IMPLEMENTOR=ziloka:IMPLEMENTOR_VERSION=ziloka_JRE" \
+     --output "$JAVA_MINIMAL"
 
 # https://nipafx.dev/jdeps-tutorial-analyze-java-project-dependencies/
 # find JDK dependencies dynamically from jar
@@ -67,5 +97,4 @@ ENV LD_LIBRARY_PATH /usr/lib
 
 COPY --from=build /usr/app/proxybroker/app/build/libs/ProxyBroker.jar .
 COPY --from=build $JAVA_HOME $JAVA_HOME
-
 ENTRYPOINT ["java", "-jar", "ProxyBroker.jar"]
